--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,22 +1,40 @@
+
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Agendas" %></title>
-    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Agendas" %>">
-    <%= stylesheet_link_tag 'admin', media: 'all' %>
-    <%# Modernizr is required for Zurb Foundation %>
-    <%= javascript_include_tag 'vendor/modernizr' %>
-    <%= javascript_include_tag 'admin' %>
-    <%= csrf_meta_tags %>
-  </head>
-  <body>
-    <header>
-      <%= render 'layouts/admin/navigation' %>
-    </header>
-    <main role="main">
-       <%= render 'layouts/admin/messages' %>
-       <%= yield %>
-    </main>
-  </body>
+<html lang="es">
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>Admin</title>
+
+
+  <%= stylesheet_link_tag    "application_admin" %>
+
+
+  <%= javascript_include_tag "vendor/modernizr" %>
+  <%= javascript_include_tag "application_admin", 'data-turbolinks-track' => true %>
+
+
+
+  <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon-44e2af011a46b2db0a7d91b3ccb656b59a1818d46e34fb15218b7c5107525f1e.ico" />
+</head>
+
+<body class="admin">
+
+
+<%= render 'layouts/admin_header' %>
+
+
+<div class="row">
+
+  <%= render  'layouts/sidebar' %>
+
+  <div class="admin-content small-12 medium-9 column">
+
+    <%= yield %>
+
+  </div>
+</div>
+</body>
 </html>
