--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -11,6 +11,6 @@
   <% end %>
 </td>
 <td>
-  <%= link_to('', user_path(user), :data => { :confirm => "Are you sure?" }, method: delete, class: 'step fi-page-delete size-24') unless user == current_user %>
+  <%= link_to('Borrar (No borra)', user, :data => { :confirm => "Are you sure?" }, class: 'step fi-page-delete size-24') unless user == current_user %>
   <%= link_to('', edit_user_path(user), class: 'step fi-page-edit size-24') %>
 </td>
