Editing and adding contributors

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -6,7 +6,7 @@
       </li>
 
       <li class=active>
-        <a href="/admin/tags">
+        <a href=<%= users_path %>>
           <i class="icon-tag"></i>
           <%= t('backend.contributors')%>
         </a>    </li>
