--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,112 +1,3 @@
-<div class="row">
-  <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
-  </div>
+<h1><%= t('backend.new_contributor')%></h1>
 
-  <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
-  </div>
-</div>
-
-<!-- widget grid -->
-<section id="widget-grid" class="">
-
-
-  <!-- START ROW -->
-
-  <div class="row">
-
-    <!-- NEW COL START -->
-    <article class="col-sm-12 col-md-12 col-lg-6">
-
-      <!-- Widget ID (each widget will need unique ID)-->
-      <div class="jarviswidget" id="wid-id-1" data-widget-editbutton="false" data-widget-custombutton="false">
-
-        <header>
-          <span class="widget-icon"> <i class="fa fa-edit"></i> </span>
-          <h2>Nuevo Usuario</h2>
-
-        </header>
-
-        <!-- widget div-->
-        <div>
-
-          <!-- widget edit box -->
-          <div class="jarviswidget-editbox">
-            <!-- This area used as dropdown edit box -->
-
-          </div>
-          <!-- end widget edit box -->
-
-          <!-- widget content -->
-          <div class="widget-body no-padding">
-
-            <%= render 'form' %>
-
-          </div>
-          <!-- end widget content -->
-
-        </div>
-        <!-- end widget div -->
-
-      </div>
-      <!-- end widget -->
-
-    </article>
-    <!-- END COL -->
-
-  </div>
-
-  <!-- END ROW -->
-
-</section>
-<!-- end widget grid -->
-
-
-</div>
-<!-- END MAIN CONTENT -->
-
-</div>
-<!-- END MAIN PANEL -->
-
-
-<!-- PAGE RELATED PLUGIN(S) -->
-<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-<script src="/assets/dependencies/plugin/jquery-form/jquery-form.min.js"></script>
-
-
-<script type="text/javascript">
-
-    // DO NOT REMOVE : GLOBAL FUNCTIONS!
-
-    $(document).ready(function() {
-
-        var $checkoutForm = $('#new_video').validate({
-            // Rules for form validation
-            rules : {
-                "video[title]" : {
-                    required : true
-                },
-                "video[link]" : {
-                    required : true
-                }
-            },
-
-            // Messages for form validation
-            messages : {
-                "video[title]" : {
-                    required : 'Este campo es obligatorio'
-                },
-                "video[link]" : {
-                    required : 'Este campo es obligatorio'
-                }
-            },
-
-            // Do not change code below
-            errorPlacement : function(error, element) {
-                error.insertAfter(element.parent());
-            }
-        });
-    })
-
-</script>
-
-
+<%= render :partial => 'form' %>
