--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_for @user, html: {class:'smart-form', novalidate: 'novalidate'} do |f| %>
+<%= form_for(@user) do |f| %>
+
     <% if @user.errors.any? %>
         <div id="error_explanation">
           <h2><%= pluralize(@user.errors.count, "error") %> prohibited this video from being saved:</h2>
@@ -10,40 +11,20 @@
           </ul>
         </div>
     <% end %>
-
     <fieldset>
-      <section>
-        <label for="name" class="input">
-          <%= f.text_field :name, placeholder: 'Nombre' %>
-        </label>
-      </section>
 
-      <section>
-        <label for="email" class="input">
-          <%= f.text_field :email, placeholder: 'Email' %>
-        </label>
-      </section>
+      <legend>Datos básicos</legend>
 
-      <% if params[:action]=="new" || params[:action]=="create" %>
+      <label>Nombre</label>
+      <%= f.text_field :first_name %>
 
-      <section>
-        <label for="password" class="input">
-          <%= f.password_field :password, placeholder: 'Contraseña' %>
-        </label>
-      </section>
+      <label>Apellidos</label>
+      <%= f.text_field :last_name %>
 
-      <section>
-        <label for="password_confirmation" class="input">
-          <%= f.password_field :password_confirmation, placeholder: 'Repita Contraseña' %>
-        </label>
-      </section>
+      <label>Email</label>
+      <%= f.text_field :email %>
 
-      <% end %>
-
+      <%= submit_tag "Guardar", :class=> "button radius success right" %>
     </fieldset>
-    <footer>
-    <%= f.submit 'Save', class: 'btn btn-primary' %>
-    <%= link_to 'Cancel', users_path, class: 'btn btn-danger'%>
-    </footer>
 
 <% end %>
