--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,14 +3,16 @@
 
 <h1><%= t('backend.contributors')%></h1>
 
+
   <!-- Search organizations -->
     <%= form_tag(search_users_path, :method=>'post') do %>
     <div class="row">
       <div class="small-12 medium-6 column">
         <%= text_field_tag :q, params[:q],:placeholder => "Nombre" %>
       </div>
+
       <div class="form-inline small-12 medium-6 column">
-        <input type="submit" name="commit" value="Buscar" class="button radius success">
+        <input type="submit" name="commit" value="Buscar" class="button radius success"> <%= link_to t('backend.new_contributor'), new_user_path, :class => "button radius warning right" %>
       </div>
     </div>
   <% end %><!-- /. Search organizations -->
@@ -36,7 +38,7 @@
     <% @users.each do |u| %>
     <tr>
       <td>
-        <p><%= link_to u.name, u %><br>
+        <p><%= link_to u.name, edit_user_path(u) %><br>
         <%= u.email %></p>
       </td>
       <td>
@@ -46,7 +48,7 @@
         <%= m %><br>
             <% end %>
       </td>
-      <td>Edit · Delete</td>
+      <td><%= link_to "Edit", edit_user_path(u)  %> · Delete</td>
     </tr>
 
     <% end %>
