--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,75 +1,57 @@
 <div class="row">
-        <div class="small-12">
-          <div class="box">
+  <div class="small-12">
+    <div class="box">
 
-            <div class="row">
-              <div class="small-12 columns">
-                <h2 class="title-l">Publicación de agendas</h2>
-              </div>
-            </div>
-
-            <div class="row">
-
-              <%= render 'form' %>
-
-              <div class="small-12 large-7 large-ofsset-1 columns mb40">
-
-                <div class="row">
-                  <div class="small-4 large-3 columns">
-                    <strong class="title-l mb20"><%=@total%></strong>
-                  </div>
-                  <div class="small-8 large-9 columns">
-                    <p class="mt5"><strong>resultados</strong> <span class="keywords">con la palabra <strong>Transparencia</strong>, <strong>desarrollo</strong>, <strong>web</strong>, <strong>software</strong>, <strong>Madrid</strong>, <strong>aplicaciones</strong>, <strong>ingeniería</strong>.</span> <a id="delete-keywords" href="#"><span class="icon icon__delete">Eliminar</span></a></p>
-                  </div>
-                </div>
-
-                <div class="tools">
-                  Recibe actualizaciones de esta lista
-                  <a href="#"><span class="icon icon__email"></span> email</a>
-                  <a href="#"><span class="icon icon__feed"></span> feed</a>
-                  <a class="right hide-for-small-only" href="#"><span class="icon icon__print"></span> Exportar</a>
-                </div><!-- .tools -->
-
-                <% @events.each do |event|%>
-                  <article class="post">
-                    <h1 class="post__title"><%= link_to event.title, show_path(event.id) %></h1>
-                    <p><strong>
-                      <%= event.position.holder.full_name%> ·
-                      <%= event.position.title %> ·
-                      <%= event.position.area.title%>
-                    </strong></p>
-                    <p><%= event.scheduled.strftime(t('date.formats.complete')) %></p>
-                  </article>
-                <% end %>
-
-
-
-              </div>
-
-            </div>
-
-            <div class="row">
-              <div class="small-12 large-7 small-offset-1 columns right mb20">
-                <div class="text-center">
-                  <%= will_paginate @events1, params: {:keyword => params[:keyword]} %>
-                  <ul class="pagination">
-                    <li class="arrow unavailable"><a href="">&laquo;</a></li>
-                    <li class="current"><a href="">1</a></li>
-                    <li><a href="">2</a></li>
-                    <li class="unavailable"><a href="">&hellip;</a></li>
-                    <li><a href="">12</a></li>
-                    <li><a href="">13</a></li>
-                    <li class="arrow"><a href="">&raquo;</a></li>
-                  </ul>
-                </div>
-              </div>
-              <div class="small-12 large-4 columns">
-                <p><a href="#">¿Hay algún error en esta página?</a></p>
-              </div>
-            </div>
-
-          </div><!-- .box -->
+      <div class="row">
+        <div class="small-12 columns">
+          <h2 class="title-l"><%= t('main.title')%></h2>
         </div>
       </div>
 
-      <%= javascript_include_tag 'search_form'%>
+      <div class="row">
+
+        <%= render 'form' %>
+
+        <div class="small-12 large-7 large-ofsset-1 columns mb40">
+
+          <%= render 'headline' %>
+
+          <div class="tools">
+            <%= t('main.get_updates')%><a href="#"><span class="icon icon__feed"></span> feed</a>
+            <%= t('main.share')%><a href="#"><span class="icon icon__email"></span> email</a>
+            <a class="right hide-for-small-only" href="#"><span class="icon icon__print"></span> Exportar</a>
+          </div><!-- .tools -->
+
+          <% @events.each do |event|%>
+            <article class="post">
+              <h1 class="post__title"><%= link_to event.title, show_path(event.id) %></h1>
+              <p><strong>
+                <%= event.position.holder.full_name%> ·
+                <%= event.position.title %> ·
+                <%= event.position.area.title%>
+              </strong></p>
+              <p><%= event.scheduled.strftime(t('date.formats.complete')) %></p>
+            </article>
+          <% end %>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="small-12 large-7 small-offset-1 columns right mb20">
+          <div class="text-center">
+            <%= will_paginate @events1, params: params , renderer: FoundationPagination::Rails,previous_label: '&laquo;', next_label: '&raquo;' %>
+          </div>
+        </div>
+
+        <div class="small-12 large-4 columns">
+          <p><a href="#"><%= t('main.any_errors')%></a></p>
+        </div>
+
+      </div>
+
+    </div><!-- .box -->
+  </div>
+</div>
+
+<%= javascript_include_tag 'search_form'%>
+
