--- a/app/views/holders/edit.html.erb
+++ b/app/views/holders/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing Admin Officer</h1>
+<h1><%= t('backend.edit_holder')%></h1>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @admin_officer %> |
-<%= link_to 'Back', admin_officers_path %>
+<%= render :partial => 'form' %>
