--- a/app/views/holders/new.html.erb
+++ b/app/views/holders/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New Admin Officer</h1>
+<h1><%= t('backend.new_holder')%></h1>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', admin_officers_path %>
+<%= render :partial => 'form' %>
