--- a/app/views/holders/show.html.erb
+++ b/app/views/holders/show.html.erb
@@ -1,4 +1,3 @@
-<p id="notice"><%= notice %></p>
-
-<%= link_to 'Edit', edit_admin_officer_path(@admin_officer) %> |
-<%= link_to 'Back', admin_officers_path %>
+<h3>User</h3>
+<p>Name: <%= @user.name if @user.name %></p>
+<p>Email: <%= @user.email if @user.email %></p>
