Event listing [finishes #104882218]

--- a/app/assets/stylesheets/participacion.scss
+++ b/app/assets/stylesheets/participacion.scss
@@ -281,7 +281,7 @@ h6 {
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
 header {
-  background: image-url('header_bg.jpg');
+  background: image-url('header.jpg');
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
@@ -634,7 +634,6 @@ header {
 }
 
 .top-links {
-  background: #0B0C0C;
   color: white;
   font-size: rem-calc(14);
 
