--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,59 +1,47 @@
+<div class="row">
+  <h1>
+    <%= t('backend.contributors')%> (<%= @users.count %>)
+    <%= link_to t('backend.new_contributor'), new_user_path, :class => "button radius warning right" %>
+  </h1>
+</div>
+
+<table id="listing" class="display" cellpadding="0" width="100%">
+  <thead>
+  <tr>
+    <th><%= t('name')%></th>
+    <th><%= t('contributes to')%></th>
+    <th><%= t('actions')%></th>
+  </tr>
+  </thead>
+  <tfoot>
+  <tr>
+    <th><%= t('name')%></th>
+    <th><%= t('contributes to')%></th>
+    <th><%= t('actions')%></th>
+  </tr>
+  </tfoot>
+  <tbody>
+  <% @users.each do |u| %>
+      <tr>
+        <td>
+          <p><%= link_to u.full_name_comma, edit_user_path(u) %><br>
+            <%= u.email %></p>
+
+        </td>
+        <td>
+          <% u.manages.map{|h| h.holder.full_name}.each do |m| %>
 
 
+              <%= m %><br>
+          <% end %>
+        </td>
+        <td>
+          <%= link_to "Edit", edit_user_path(u)  %> · Delete
+        </td>
+      </tr>
+  <% end %>
+  </tbody>
+</table>
 
-<h1><%= t('backend.contributors')%></h1>
+<%= javascript_include_tag 'admin_listings' %>
 
-
-  <!-- Search organizations -->
-    <%= form_tag(search_users_path, :method=>'post') do %>
-    <div class="row">
-      <div class="small-12 medium-6 column">
-        <%= text_field_tag :q, params[:q],:placeholder => "Nombre" %>
-      </div>
-
-      <div class="form-inline small-12 medium-6 column">
-        <input type="submit" name="commit" value="Buscar" class="button radius success"> <%= link_to t('backend.new_contributor'), new_user_path, :class => "button radius warning right" %>
-      </div>
-    </div>
-  <% end %><!-- /. Search organizations -->
-
-
-  <h2>Resultados (<%= @users.total_entries %>)</h2>
-
-
-<%= will_paginate @users, :params => { :q => params[:q] }, renderer: FoundationPagination::Rails %>
-
-
-  <table>
-    <thead>
-    <tr>
-      <th>Nombre</th>
-
-      <th>Contribuye a</th>
-      <th>Acciones</th>
-
-    </tr>
-    </thead>
-    <tbody>
-    <% @users.each do |u| %>
-    <tr>
-      <td>
-        <p><%= link_to u.name, edit_user_path(u) %><br>
-        <%= u.email %></p>
-      </td>
-      <td>
-        <% u.manages.map{|h| h.holder.full_name}.each do |m| %>
-
-
-        <%= m %><br>
-            <% end %>
-      </td>
-      <td><%= link_to "Edit", edit_user_path(u)  %> · Delete</td>
-    </tr>
-
-    <% end %>
-
-    </tbody>
-  </table>
-
-<%= will_paginate @users, :params => { :q => params[:q] }, renderer: FoundationPagination::Rails %>
