Areas listing [finishes #104882210]

--- a/app/assets/stylesheets/application_admin.css.scss
+++ b/app/assets/stylesheets/application_admin.css.scss
@@ -6,3 +6,4 @@
 @import "participacion";
 @import "c3";
 @import "dataTables/jquery.dataTables.foundation";
+@import "jquery.treetable.theme.default"
