--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -18,15 +18,15 @@
         </a>
       </li>
 
-      <li class=<%= active_menu('visitors') %>>
-        <a href="/admin/debates">
+      <li class=<%= active_menu('areas') %>>
+        <a href="<%= areas_path %>">
           <i class="icon-settings"></i>
           <%= t("backend.areas")%>
         </a>
       </li>
 
-      <li class=<%= active_menu('visitors') %>>
-        <a href="/admin/comments">
+      <li class=<%= active_menu('holders') %>>
+        <a href="<%= holders_path %>">
           <i class="icon-organizations"></i>
           <%= t("backend.positions")%>
         </a>
