--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -7,7 +7,7 @@
       <li class=<%= active_menu('users') %>>
         <a href=<%= users_path %>>
           <i class="icon-user"></i>
-          <%= t("backend.contributors")%>
+          <%= t("backend.users")%>
         </a>
       </li>
 
