--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -18,10 +18,11 @@
   <body class="admin">
 
     <%= render 'layouts/admin_header' %>
+    <%= render  'layouts/admin_messages' %>
 
     <div class="row">
 
-      <%= render  'layouts/sidebar' %>
+      <%= render  'layouts/admin_sidebar' %>
 
       <div class="admin-content small-12 medium-9 column">
 
