--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -14,12 +14,17 @@
 
         <div class="small-12 large-7 large-ofsset-1 columns mb40">
 
-          <%= render 'headline' %>
+          <div class="row">
+            <%= render 'visitors/headline/holder' if params[:holder] %>
+            <%= render 'visitors/headline/search' if params %>
+            <%= render 'visitors/headline/last' %>
+          </div>
 
           <div class="tools">
-            <%= t('main.get_updates')%><a href="#"><span class="icon icon__feed"></span> feed</a>
+            <%= t('main.get_updates')%><a href="<%= current_url(:format=>:atom)%>"><span class="icon icon__feed"></span> feed</a>
             <%= t('main.share')%><a href="#"><span class="icon icon__email"></span> email</a>
-            <a class="right hide-for-small-only" href="#"><span class="icon icon__print"></span> Exportar</a>
+            <a class="right hide-for-small-only" href="#"><span class="icon icon__print"></span> <%= t('main.export')%></a>
+            <%= link_to "JSON of this page", current_url(:format=>:json) %>
           </div><!-- .tools -->
 
           <% @events.each do |event|%>
@@ -44,7 +49,7 @@
         </div>
 
         <div class="small-12 large-4 columns">
-          <p><a href="#"><%= t('main.any_errors')%></a></p>
+          <p><%= link_to t('main.any_errors'), contact_path %></p>
         </div>
 
       </div>
