--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="header" role="banner">
   <div class="row hide-for-small-only">
     <div class="small-6 columns">
-      <button data-dropdown="languagesMenu" aria-controls="languagesMenu" aria-expanded="false" class="button transparent dropdown"><%= t('header.page_language') + ' ' + t('header.spanish') %></button>
+      <button data-dropdown="languagesMenu" aria-controls="languagesMenu" aria-expanded="false" class="button transparent dropdown"><%= current_language %></button>
       <ul id="languagesMenu" data-dropdown-content class="f-dropdown" aria-hidden="true">
         <li><%= link_to t('header.spanish'), change_language_path(:es) %></li>
         <li><%= link_to t('header.english'), change_language_path(:en) %></li>
