Events edition [finishes #104882220]

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <h1>
     <%= t('backend.events')%> (<%= @events.count %>)
-    <%= link_to t('backend.new_event'), new_user_path, :class => "button radius warning right" %>
+    <%= link_to t('backend.new_event'), new_event_path, :class => "button radius warning right" %>
     </h1>
 </div>
 
