--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -14,19 +14,84 @@
 
       <legend>Datos básicos</legend>
 
-      <label>Nombre</label>
-      <%= f.text_field :first_name %>
+      <label>Title</label>
+      <%= f.text_field :title %>
 
-      <label>Apellidos</label>
-      <%= f.text_field :last_name %>
+      <label>Location</label>
+      <%= f.text_field :location %>
+
+      <label>Description</label>
+      <%= f.text_area :description %>
+
+      <label>Fecha</label>
+      <%= f.text_field :scheduled, class: 'datepicker' %>
+
+      <fieldset><!-- Participants -->
+        <legend><%= t('backend.positions') %></legend>
+        <div class="row">
+          <div class="small-2 columns">
+              Nombre
+          </div>
+          <div class="small-2 columns"></div>
+        </div>
+
+        <div id="participants">
+          <%= f.fields_for :participants do |participant| %>
+              <%= render 'participant_fields', f: participant %>
+          <% end %>
+          <div class="left inline">
+            <%= link_to_add_association 'Add participant', f, :participants, :class => "button tiny info alert " %>
+          </div>
+        </div>
+      </fieldset>
 
 
-      <% if @holder.persisted? %>
-      #coocoon
+      <fieldset><!-- Attendees -->
+        <legend><%= t('backend.positions') %></legend>
+        <div class="row">
+          <div class="small-2 columns">
+              Nombre
+          </div>
+          <div class="small-2 columns">
+              Cargo
+          </div>
+          <div class="small-2 columns">
+              Empresa
+          </div>
+          <div class="small-2 columns"></div>
+        </div>
 
+        <div id="attendees">
+          <%= f.fields_for :attendees do |attendee| %>
+              <%= render 'attendee_fields', f: attendee %>
+          <% end %>
+          <div class="left inline">
+            <%= link_to_add_association 'Add attendee', f, :attendees, :class => "button tiny info alert " %>
+          </div>
+        </div>
+      </fieldset>
 
+      <fieldset><!-- Attachments -->
+        <legend><%= t('backend.attachments') %></legend>
+        <div class="row">
+          <div class="small-2 columns">
+              Nombre
+          </div>
+          <div class="small-2 columns">
+              Cargo
+          </div>
+          <div class="small-2 columns"></div>
+        </div>
 
-      <% end %>
+        <div id="attachments">
+          <%= f.fields_for :attachments do |attachment| %>
+              <%= render 'attachment_fields', f: attachment %>
+          <% end %>
+          <div class="left inline">
+            <%= link_to_add_association 'Add attendee', f, :attachments, :class => "button tiny info alert " %>
+          </div>
+        </div>
+      </fieldset>
 
 
       <%= submit_tag "Guardar", :class=> "button radius success right" %>
