--- a/app/views/visitors/_form.html.erb
+++ b/app/views/visitors/_form.html.erb
@@ -8,16 +8,12 @@
     <div class="mb20">
       <%= label_tag :area, t('main.form.main_area'), class: 'title-s' %>
       <div class="custom-select">
-       <%#= select_tag :main_area,options_for_select(Area.main_areas.map{|area| [ area.title, area.id ]},params[:main_area]), prompt: t('main.form.any'), class: 'dropdown' %>
-       <%= select_tag :main_area, options_for_select(@categories, params[:main_area]) %>
+       <%= select_tag :area, options_for_select(@tree, params[:area]) %>
       </div>
     </div>
     <div class="mb20">
-      <%= label_tag :area, t('main.form.child_area'), class: 'title-s' %>
-    </div>
-    <div class="mb20">
       <%= label_tag :holder, t('main.form.holder'), class: 'title-s' %>
-      <%= select_tag :holder, options_for_select(Position.current.area_filtered(params[:child_area]).map{|position| [ position.holder.full_name, position.id ]},params[:holder]),prompt: t('main.form.any'), class: 'dropdown'  %>
+      <%= select_tag :holder, options_for_select(@holders.map{|holder| [holder.full_name_comma, holder.id]},params[:holder]),prompt: t('main.form.any'), class: 'dropdown'  %>
     </div>
     <div class="mb20">
       <%= label_tag :date, t('main.form.date'), class: 'title-s' %>
