--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,4 +11,6 @@
  * file per style scope.
  *
  *= require all
+ *= require dataTables/jquery.dataTables.foundation
+ *= require jquery.treetable.theme.default
  */
