--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
 <html lang="es">
-
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>Admin</title>
-
-    <%= stylesheet_link_tag    "application_admin" %>
-    <%= javascript_include_tag "vendor/modernizr" %>
-    <%= javascript_include_tag "application_admin", 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag    "application" %>
+    <%= javascript_include_tag "admin", 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
-
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <%= javascript_include_tag 'dependencies/html5shiv.min' %>
+      <%= javascript_include_tag 'dependencies/respond.min' %>
+    <![endif]-->
     <link rel="shortcut icon" type="image/x-icon" href="" />
   </head>
 
-  <body class="admin">
+  <body class="">
 
-    <%= render 'layouts/admin_header' %>
+    <%= render 'layouts/header' %>
     <%= render  'layouts/admin_messages' %>
 
+    <div id="main-content" class="main-content">
     <div class="row">
-
-      <%= render  'layouts/admin_sidebar' %>
-
-      <div class="admin-content small-12 medium-9 column">
-
-        <%= yield %>
-
+      <div class="small-12">
+        <div class="box">
+          <div class="row">
+            <div class="small-12 large-2 columns">
+              <%= render  'layouts/admin_sidebar' %>
+            </div>
+            <div class="small-12 large-10 large-ofsset-1 columns mb40">
+              <%= yield %>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
+
 </html>
